# sliding-window-aggregation

./: Cargo.toml  README.md
src/: lib.rs
